<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="281dp"
        android:layout_height="100dp"
        android:background="@color/VioletaClaro"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119">

        <RadioButton
            android:id="@+id/rdArquero"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/archer" />

        <RadioButton
            android:id="@+id/rdGuerrero"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/warrior" />

        <RadioButton
            android:id="@+id/rdMago"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/magician" />

        <!-- RadioButton que ocupa dos columnas -->
        <RadioButton
            android:id="@+id/rdHerrero"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/swordsmith" />

        <!-- RadioButton que ocupa la tercera columna -->
        <RadioButton
            android:id="@+id/rdMinero"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/miner" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>