<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:layout_width="216dp"
        android:layout_height="101dp"
        android:background="@color/VioletaClaro"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119">

        <RadioButton
            android:id="@+id/rdElfo"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/elfo"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdEnano"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/enano" />

        <RadioButton
            android:id="@+id/rdHobbit"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/hobbit" />

        <!-- RadioButton que ocupa dos columnas -->
        <RadioButton
            android:id="@+id/rdHumano"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/humano" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

<!--
        <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="358dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037">

        <RadioButton
            android:id="@+id/rdArquero"
            android:layout_width="80dp"
            android:layout_height="52dp"
            android:text="@string/elfo"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdGuerrero"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/enano"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdMago"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hobbit" />

        <RadioButton
            android:id="@+id/rdHerrero"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/humano" />
    </RadioGroup>
 -->